rnsc/test_data/integration/error/parser/outside_class_directive/after_class_dir/dot_tab.rns
.class public EmptyClass
.super java/lang/Object

.class_end
.	
